[package]
name = "RustAgents"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] } # Check for the latest version
rustyline = { version = "14.0.0", features = ["with-file-history"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde_with = "3.9.0"
